# otakuict-minions

./: .gitignore  AGENTS.md  AI_COMPANY_USAGE.md
.agents/skills/ai-company-lead/: SKILL.md
.ai-company/: START_HERE.md
.ai-company/identity/: communication-style.md  company-principles.md
.ai-company/memory/: current-state.md  decisions.md  lessons-learned.md  open-questions.md  work-log.md
.ai-company/operating-model/: codex-discovery.md  delegation-rules.md  memory-rules.md  quality-standards.md  safety-guardrails.md  sprint-process.md
.ai-company/prompts/: new-project.md  use-ai-company.md
.ai-company/runtime/: agent-events.jsonl  agent-state.json  sessions.json
.ai-company/scripts/: agent-monitor-lib.ps1  install-codex-discovery.ps1  monitor-agent.ps1  monitor-grid.ps1  monitor-overview.ps1  monitor-timeline.ps1  start-monitor.ps1  update-agent-status.ps1
.ai-company/templates/: campaign-brief.md  data-request.md  decision-record.md  project-brief.md  review-report.md  sprint-brief.md  task-card.md
.codex/agents/: company_lead.toml  data_engineer.toml  marketing_strategist.toml  product_manager.toml  qa_reviewer.toml  software_developer.toml
projects/iphone-photo-importer/: .gitignore  README.md
projects/iphone-photo-importer/python/: pyproject.toml
projects/iphone-photo-importer/python/iphone_photo_importer/: cli.py  ingest.py  library.py  media.py  models.py  usb_bridge.py
projects/iphone-photo-importer/python/scripts/: windows_usb_bridge.ps1
projects/pokedex-nextjs/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
(+42 files in other folders)
